Add spring cloud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port: ${port:8081}
+spring.application.name: fake-jobmanager
+eureka.client.serviceUrl.defaultZone=${vcap.services.pz-service-reg.credentials.url}
+spring.cloud.services.registrationMethod=direct
+
 #debug: true
