--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,11 @@
 			<artifactId>spring-boot-starter-cloud-connectors</artifactId>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>1.4.2.RELEASE</version>
-		</dependency>-->
+		</dependency>
 
 
 		<dependency>
