--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port: ${port:8081}
 spring.application.name: fake-jobmanager
-eureka.client.serviceUrl.defaultZone=${vcap.services.pz-service-reg.credentials.url}
+eureka.client.serviceUrl.defaultZone=${vcap.services.p-service-registry.credentials.uri}
 spring.cloud.services.registrationMethod=direct
 
 #debug: true
