--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-server.port: ${port:8081}
-spring.application.name: fake-jobmanager
+server.port=${port:8081}
+spring.application.name=fake-jobmanager
 eureka.client.serviceUrl.defaultZone=${vcap.services.p-service-registry.credentials.uri}
 spring.cloud.services.registrationMethod=direct
+eureka.instance.hostname=${vcap.application.uris[0]}
+eureka.instance.nonSecurePort=${port:8081}
 
 #debug: true
