Try adding oauth config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=${port:8081}
 spring.application.name=fake-jobmanager
-eureka.client.serviceUrl.defaultZone=${vcap.services.pz-service-registry.credentials.uri}/eureka
+eureka.client.serviceUrl.defaultZone=${vcap.services.pz-service-registry.credentials.uri}
 eureka.password=${vcap.services.pz-service-registry.credentials.client_secret}
 spring.cloud.services.registrationMethod=direct
 eureka.instance.hostname=${vcap.application.uris[0]}
 eureka.instance.nonSecurePort=${port:8081}
+security.oauth2.client.access-token-uri=${vcap.services.pz-service-registry.credentials.access_token_uri}
+security.oauth2.client.client-id=${vcap.services.pz-service-registry.credentials.client_id}
+security.oauth2.client.client-secret=${vcap.services.pz-service-registry.credentials.client_secret}
 
 #debug: true
