--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${port:8081}
 spring.application.name=fake-jobmanager
-eureka.client.serviceUrl.defaultZone=${vcap.services.pz-service-registry.credentials.uri}
+eureka.client.serviceUrl.defaultZone=${vcap.services.pz-service-registry.credentials.uri}/eureka
 eureka.password=${vcap.services.pz-service-registry.credentials.client_secret}
 spring.cloud.services.registrationMethod=direct
 eureka.instance.hostname=${vcap.application.uris[0]}
@@ -8,5 +8,9 @@ eureka.instance.nonSecurePort=${port:8081}
 security.oauth2.client.access-token-uri=${vcap.services.pz-service-registry.credentials.access_token_uri}
 security.oauth2.client.client-id=${vcap.services.pz-service-registry.credentials.client_id}
 security.oauth2.client.client-secret=${vcap.services.pz-service-registry.credentials.client_secret}
+security.user.password=none
+security.basic.enabled=false
+#security.oauth2.resource.tokenInfoUri=${vcap.services.pz-service-registry.credentials.access_token_uri}
 
-#debug: true
+debug=true
+logging.level.root=DEBUG
