--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,24 @@
 			<artifactId>spring-cloud-config-client</artifactId>
 		</dependency>-->
 
+		<!--
+		Goes with @EnableOAuth2Sso
+		<dependency>-->
+			<!--<groupId>org.springframework.cloud</groupId>-->
+			<!--<artifactId>spring-cloud-starter-oauth2</artifactId>-->
+			<!--<version>1.2.2.RELEASE</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.cloud</groupId>-->
+			<!--<artifactId>spring-cloud-security</artifactId>-->
+			<!--<version>1.2.2.RELEASE</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.security.oauth</groupId>-->
+			<!--<artifactId>spring-security-oauth2</artifactId>-->
+			<!--<version>2.3.2.RELEASE</version>-->
+		<!--</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-spring-service-connector</artifactId>
